--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 theme: jekyll-theme-dinky
 
-title: Methanol Production Process Simulation
+title: Methanol Production Simulation
 description: by Rajdeep Dev
 
 show_downloads: false
