--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 theme: jekyll-theme-dinky
 
-title: Methanol Production Simulation
+title: Process Simulation of Methanol Production from Syngas
 description: by Rajdeep Dev
 
 show_downloads: false
